# HyperXO

./: .gitignore  AGENTS.md  Dockerfile  GAMBITS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.husky/: pre-commit
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  signaling.rs
frontend/src/components/: BanScreen.tsx  BigBoard.tsx  CardTray.tsx  CombatLog.tsx  DraftScreen.tsx  FadeIn.tsx  FriendGame.tsx  GameStatus.tsx  GameView.tsx  Lobby.tsx  Mark.tsx  Menu.tsx  PassAndPlay.tsx  PnPLobby.tsx  SmallBoard.tsx
frontend/src/engine/: ai-gambits.ts  ai.ts  game.ts  powerups.ts  utils.ts
frontend/src/engine/__tests__/: ai-gambits.test.ts  ai.test.ts  conquest.test.ts  game.test.ts  integration.test.ts  powerups.test.ts
src/hyperxo/: __init__.py  __main__.py  ai.py  game.py  ui.py
tests/: test_ai.py  test_api.py  test_game.py
