[package]
name = "app"
version = "0.1.0"
description = "HyperXO - Ultimate Tic-Tac-Toe"
authors = ["HyperXO Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
warp = "0.3"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
local-ip-address = "0.6"
ureq = { version = "3", features = ["json"] }
include_dir = "0.7"
tauri-plugin-websocket = "2"
